--- a/coding/simple-web/templates/test.html
+++ b/coding/simple-web/templates/test.html
@@ -16,6 +16,12 @@
             <input type="password" id="password" name="name_password"><br>
             <input type="submit" id="submit" name="name_submit"><br>
         </form>
+        <a href="test.html2">html2</a>
+        <table>
+            <tr>
+                <th>aa</th>
+            </tr>
+        </table>
     </div>
 </body>
 </html>
