[add] openai && update simple web

--- a/coding/simple-web/templates/test.html
+++ b/coding/simple-web/templates/test.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+    h1 {
+        color: aqua;
+    }
+    </style>
 </head>
 <body>
     <h1>test</h1>
@@ -20,6 +25,10 @@
         <table>
             <tr>
                 <th>aa</th>
+            </tr>
+            <tr>
+                <td>bb</td>
+                <td>bb</td>
             </tr>
         </table>
     </div>
